--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "menhera-picasso",
   "version": "2.0.0",
-  "description": "",
+  "description": "Menhera Picasso is an application to handle image rendering for MenheraBot",
   "main": "src/server.js",
   "scripts": {
     "start": "node -r dotenv/config  .",
