--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "menhera-picasso",
-  "version": "2.0.2",
+  "version": "3.0.0",
   "description": "Menhera Picasso is an application to handle image rendering for MenheraBot",
   "main": "src/server.js",
   "scripts": {
@@ -27,6 +27,7 @@
     "millify": "^4.0.0"
   },
   "devDependencies": {
+    "eslint": "^7.32.0",
     "nodemon": "^2.0.7"
   }
 }
