--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
-    "millify": "^4.0.0"
+    "millify": "^4.0.0",
+    "ws": "^8.2.2"
   },
   "devDependencies": {
     "eslint": "^7.32.0",
