--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "menhera-picasso",
-  "version": "4.3.9",
+  "version": "4.4.0-DEVELOPMENT",
   "description": "Menhera Picasso is an application to handle image rendering for MenheraBot",
   "main": "src/server.js",
   "scripts": {
