--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "menhera-picasso",
-  "version": "4.4.1",
+  "version": "4.4.1-DEV",
   "description": "Menhera Picasso is an application to handle image rendering for MenheraBot",
   "main": "src/server.js",
   "scripts": {
@@ -20,6 +20,7 @@
   },
   "homepage": "https://github.com/ySnoopyDogy/Menhera-Picasso#readme",
   "dependencies": {
+    "@discordjs/collection": "^0.6.0",
     "canvas": "^2.9.1",
     "cors": "^2.8.5",
     "dotenv": "^16.0.0",
